--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "mw-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "- [About](#about) - [Installation](#installation) - [Documentation](#documentation) - [Development](#development) - [License](#license)",
   "main": "lib/cli/index.js",
   "scripts": {
+    "build:version": "tsc -v",
+    "clean": "mw clean",
+    "test": "karma start",
+    "tsc:version": "tsc -v",
     "build:dist": "tsc",
     "copydir": "cpx \"bin/*\" dist/bin",
     "copyfiles": "copyfiles package.json LICENSE README.md CHANGELOG.md dist",
-    "release:local:npm": "npm run build:dist && npm run copydir && npm run copyfiles && npm link dist"
+    "release:local:npm:all": "npm run build:dist && npm run copydir && npm run copyfiles && cd dist && npm install && npm link",
+    "release:local:npm": "npm run build:dist && npm run copydir && npm run copyfiles && npm link dist",
+    "doc": "typedoc --out doc src --options typedoc.json"
   },
   "author": "",
   "license": "ISC",
@@ -15,17 +21,69 @@
     "mw": "./bin/mw"
   },
   "dependencies": {
-    "exit": "^0.1.2",
-    "resolve": "^1.3.0",
-    "typescript-logging": "^0.4.2"
-  },
-  "devDependencies": {
+    "@angular-devkit/core": "^0.0.22",
+    "@angular-devkit/schematics": "0.0.42",
+    "@angular-devkit/schematics-tools": "^0.0.1",
+    "@ngtools/json-schema": "^1.1.0",
+    "@schematics/angular": "^0.1.13",
+    "@types/argparse": "^1.0.33",
+    "@types/clean-css": "^3.4.30",
+    "@types/fs-extra": "^5.0.0",
+    "@types/glob": "^5.0.35",
+    "@types/graceful-fs": "^4.1.2",
+    "@types/html-minifier": "^3.5.1",
+    "@types/htmlhint": "^0.9.1",
+    "@types/jasmine": "^2.8.4",
+    "@types/karma": "^1.7.3",
+    "@types/less": "^0.0.32",
+    "@types/mkdirp": "^0.5.2",
+    "@types/rimraf": "^2.0.2",
+    "@types/uglify-js": "^2.6.30",
+    "argparse": "^1.0.9",
+    "chalk": "^2.3.0",
+    "clean-css": "^4.1.11",
     "copyfiles": "^1.2.0",
     "cpx": "^1.5.0",
+    "exit": "^0.1.2",
+    "fs-extra": "^5.0.0",
+    "glob": "^7.1.2",
+    "graceful-fs": "^4.1.11",
+    "html-minifier": "^3.5.10",
+    "htmlhint": "^0.9.13",
     "json2typescript": "^1.0.5",
-    "@types/load-json-file": "^2.0.7"
+    "less": "^3.0.1",
+    "lesshint": "^4.6.5",
+    "mkdirp": "^0.5.1",
+    "name-lint": "^1.0.5",
+    "node-modules-path": "^1.0.1",
+    "replace": "^0.3.0",
+    "resolve": "^1.3.0",
+    "rimraf": "^2.6.2",
+    "rxjs": "^5.5.6",
+    "templatecache": "^1.0.7",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2",
+    "typescript-logging": "^0.4.2",
+    "uglify-js": "^3.3.14"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.8.0",
+    "karma": "2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-code-reporter": "0.0.7",
+    "karma-jasmine": "^1.1.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-source-map-support": "^1.2.0",
+    "karma-typescript": "3.0.12",
+    "typedoc": "^0.9.0"
   },
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "types": "name-lint/index.d.ts",
+  "keywords": []
 }
