Changement du nom de la commande de gg en gc pour "generic command"

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "gg": "./bin/gc"
+    "gc": "./bin/gc"
   },
   "dependencies": {
     "@angular-devkit/core": "^0.0.29",
