Changement du nom de la commande de gc en gcl pour "generic command"

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "gc": "./bin/gc"
+    "gcl": "./bin/gcl"
   },
   "dependencies": {
     "@angular-devkit/core": "^0.0.29",
